--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Compiled class file
+﻿# Compiled class file
 *.class
 
 # Log file
@@ -28,21 +28,21 @@ hs_err_pid*
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-/dist
-/tmp
-/out-tsc
+/dist/
+/tmp/
+/out-tsc/
 # Only exists if Bazel was run
-/bazel-out
+/bazel-out/
 
 # dependencies
-/node_modules
+node_modules/
 
 # profiling files
 chrome-profiler-events.json
 speed-measure-plugin.json
 
 # IDEs and editors
-/.idea
+/.idea/
 .project
 .classpath
 .c9/
@@ -59,9 +59,9 @@ speed-measure-plugin.json
 .history/*
 
 # misc
-/.sass-cache
-/connect.lock
-/coverage
+/.sass-cache/
+/connect.lock/
+/coverage/
 /libpeerconnection.log
 npm-debug.log
 yarn-error.log
