add taskManager frontend and backend project using Spring Boot 2 and Angular 7

--- a/.gitignore
+++ b/.gitignore
@@ -28,11 +28,11 @@ hs_err_pid*
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-/dist/
-/tmp/
-/out-tsc/
+dist/
+mp/
+out-tsc/
 # Only exists if Bazel was run
-/bazel-out/
+bazel-out/
 
 # dependencies
 node_modules/
@@ -42,7 +42,8 @@ chrome-profiler-events.json
 speed-measure-plugin.json
 
 # IDEs and editors
-/.idea/
+.idea/
+target/
 .project
 .classpath
 .c9/
@@ -59,14 +60,14 @@ speed-measure-plugin.json
 .history/*
 
 # misc
-/.sass-cache/
-/connect.lock/
-/coverage/
-/libpeerconnection.log
+.sass-cache/
+connect.lock/
+coverage/
+libpeerconnection.log
 npm-debug.log
 yarn-error.log
 testem.log
-/typings
+typings/
 
 # System Files
 .DS_Store
