--- a/frontend/src/main/web/package.json
+++ b/frontend/src/main/web/package.json
@@ -24,6 +24,7 @@
     "font-awesome": "^4.7.0",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.5.2",
+    "transform": "^1.1.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
