--- a/frontend/src/main/web/package.json
+++ b/frontend/src/main/web/package.json
@@ -11,13 +11,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.15",
-    "@angular/cdk": "^8.2.2",
+    "@angular/animations": "^7.2.0",
+    "@angular/cdk": "^7.2.0",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
-    "@angular/material": "^8.2.2",
+    "@angular/material": "^7.2.0",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
@@ -30,7 +30,8 @@
     "rxjs-compat": "^6.5.2",
     "transform": "^1.1.2",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+    "ag-grid-angular": "latest"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
