--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 #datasorse settings for postgresql database
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/taskManager
-spring.datasource.username=postgres
-spring.datasource.password=2016aReV2017
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/taskManager
+#spring.datasource.username=postgres
+#spring.datasource.password=2016aReV2017
 #spring.datasource.initialization-mode=always
 #spring.datasource.schema=classpath:/static/sql/schema.sql
 #spring.datasource.data=classpath:/static/sql/data.sql
 
 #datasorse settings for microsoft sql database
-#spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#spring.datasource.url=jdbc:sqlserver://localhost;databaseName=taskManager
-#spring.datasource.username=vmatevosian
-#spring.datasource.password=vmatevosian
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=taskManager
+spring.datasource.username=vmatevosian
+spring.datasource.password=vmatevosian
 #spring.datasource.initialization-mode=always
 #spring.datasource.schema=classpath:/static/sql/schema.sql
 #spring.datasource.data=classpath:/static/sql/data.sql
