--- a/frontend/src/main/web/package.json
+++ b/frontend/src/main/web/package.json
@@ -12,15 +12,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^7.2.0",
-    "@angular/cdk": "^7.2.0",
+    "@angular/cdk": "^7.3.7",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
+    "@angular/flex-layout": "^7.0.0-beta.24",
     "@angular/forms": "~7.2.0",
     "@angular/material": "^7.2.0",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "ag-grid-angular": "latest",
     "ag-grid-community": "^21.2.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
@@ -30,8 +32,7 @@
     "rxjs-compat": "^6.5.2",
     "transform": "^1.1.2",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26",
-    "ag-grid-angular": "latest"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
