--- a/frontend/src/main/web/package.json
+++ b/frontend/src/main/web/package.json
@@ -32,7 +32,8 @@
     "rxjs-compat": "^6.5.2",
     "transform": "^1.1.2",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+    "moment": "latest"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
