OAuth backend setup step 1

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,40 +1,40 @@
-#datasorse settings for postgresql database
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://localhost:5432/taskManager
-#spring.datasource.username=postgres
-#spring.datasource.password=2016aReV2017
-#spring.datasource.initialization-mode=always
-#spring.datasource.schema=classpath:/static/sql/schema.sql
-#spring.datasource.data=classpath:/static/sql/data.sql
-
-#datasorse settings for microsoft sql database
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=taskManager
-spring.datasource.username=vmatevosian
-spring.datasource.password=vmatevosian
-#spring.datasource.initialization-mode=always
-#spring.datasource.schema=classpath:/static/sql/schema.sql
-#spring.datasource.data=classpath:/static/sql/data.sql
-
-
-#org.postgresql.jdbc.PgConnection.createClob() is not yet implemented
-#The property hibernate.jdbc.lob.non_contextual_creation works, you just need to use it like this if you're using Spring Boot:
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.show-sql=false
-spring.jpa.generate-ddl = false
-spring.jpa.hibernate.ddl-auto=update
-
-
-
-
-
-#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#spring.datasource.url=jdbc:sqlserver://localhost;databaseName=employees
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql = true
+##datasorse settings for postgresql database
+##spring.datasource.driver-class-name=org.postgresql.Driver
+##spring.datasource.url=jdbc:postgresql://localhost:5432/taskManager
+##spring.datasource.username=postgres
+##spring.datasource.password=2016aReV2017
+##spring.datasource.initialization-mode=always
+##spring.datasource.schema=classpath:/static/sql/schema.sql
+##spring.datasource.data=classpath:/static/sql/data.sql
 #
-### Hibernate Properties
-## The SQL dialect makes Hibernate generate better SQL for the chosen database
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dialect
+##datasorse settings for microsoft sql database
+#spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.datasource.url=jdbc:sqlserver://localhost;databaseName=taskManager
+#spring.datasource.username=vmatevosian
+#spring.datasource.password=vmatevosian
+##spring.datasource.initialization-mode=always
+##spring.datasource.schema=classpath:/static/sql/schema.sql
+##spring.datasource.data=classpath:/static/sql/data.sql
+#
+#
+##org.postgresql.jdbc.PgConnection.createClob() is not yet implemented
+##The property hibernate.jdbc.lob.non_contextual_creation works, you just need to use it like this if you're using Spring Boot:
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=false
+#spring.jpa.show-sql=false
+#spring.jpa.generate-ddl = false
+#spring.jpa.hibernate.ddl-auto=update
+#
+#
+#
+#
+#
+##spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+##spring.datasource.url=jdbc:sqlserver://localhost;databaseName=employees
+##spring.datasource.username=sa
+##spring.datasource.password=
+##spring.jpa.show-sql=true
+##spring.jpa.properties.hibernate.format_sql = true
+##
+#### Hibernate Properties
+### The SQL dialect makes Hibernate generate better SQL for the chosen database
+##spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dialect
