--- a/frontend/src/main/web/package.json
+++ b/frontend/src/main/web/package.json
@@ -25,15 +25,18 @@
     "ag-grid-angular": "latest",
     "ag-grid-community": "^21.2.0",
     "bootstrap": "^4.3.1",
+    "bootstrap-social": "^5.1.1",
+    "bower": "^1.8.8",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "install": "^0.13.0",
+    "moment": "latest",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.5.2",
     "transform": "^1.1.2",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26",
-    "moment": "latest"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
