--- a/frontend/src/main/web/angular.json
+++ b/frontend/src/main/web/angular.json
@@ -25,7 +25,8 @@
             "styles": [
               "src/styles.css",
               "./node_modules/ag-grid-community/dist/styles/ag-grid.css",
-              "./node_modules/ag-grid-community/dist/styles/ag-theme-balham.css"
+              "./node_modules/ag-grid-community/dist/styles/ag-theme-balham.css",
+              "./node_modules/bootstrap-social/bootstrap-social.css"
             ],
             "scripts": [
               "./node_modules/hammerjs/hammer.min.js"
@@ -86,7 +87,8 @@
             "styles": [
               "src/styles.css",
               "./node_modules/ag-grid-community/dist/styles/ag-grid.css",
-              "./node_modules/ag-grid-community/dist/styles/ag-theme-balham.css"
+              "./node_modules/ag-grid-community/dist/styles/ag-theme-balham.css",
+              "./node_modules/bootstrap-social/bootstrap-social.css"
             ],
             "scripts": [],
             "assets": [
